--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="assets/lib/angularfire.min.js"></script>
     <script src="assets/js/content.js"></script>
 </head>
-<body style="font-family:Verdana; width: 250px;">
+<body style="font-family:Verdana; width: 250px; max-height: 300px; overflow-y: auto;">
 <div class="container" ng-view>
 </div>
 </body>
