--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
     <title>Chatflix</title>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href="assets/css/bootstrap.css" rel="stylesheet"/>
     <script src="assets/lib/angular.min.js"></script>
     <script src="assets/lib/angular-route.min.js"></script>
     <script src="assets/lib/firebase.js"></script>
     <script src="assets/lib/angularfire.min.js"></script>
+    <script src="assets/lib/scrollglue.js"></script>
     <script src="assets/js/content.js"></script>
 </head>
-<body style="font-family:Verdana; width: 250px; max-height: 300px; overflow-y: auto;">
+<body style="font-family: 'Quicksand', sans-serif; width: 250px; max-height: 300px; overflow-y: auto;">
 <div class="container" ng-view>
 </div>
 </body>
